[tool.poetry]
name = "dvmn_lesson8"
version = "0.1.0"
description = "Project for education purposes"
authors = ["Dmitry Plevkov <wwarne@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
python-decouple = "^3.4"
asks = "^2.4.12"
trio = "^0.18.0"
Quart = "^0.14.1"
Quart-Trio = "^0.7.0"
trio-asyncio = "^0.12.0"
aioredis = "^1.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
